[gd_scene load_steps=12 format=2]

[ext_resource path="res://Controllers/Camera.gd" type="Script" id=1]
[ext_resource path="res://Common/Shaders/pixelize.shader" type="Shader" id=2]
[ext_resource path="res://Common/Shaders/chromAber.shader" type="Shader" id=3]
[ext_resource path="res://Common/Shaders/greyScale.shader" type="Shader" id=4]
[ext_resource path="res://Common/Shaders/mirage.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/size_x = 0.0
shader_param/size_y = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/amount = 1.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/frequency = 60.0
shader_param/depth = 0.01

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Shaders/Pixelize:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shaders/Pixelize:material:shader_param/size_x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shaders/Pixelize:material:shader_param/size_y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Shaders/Pixelize:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shaders/Pixelize:material:shader_param/size_x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shaders/Pixelize:material:shader_param/size_y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.1 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fadeIn"
} ]
}

[node name="Camera" type="Camera2D"]
light_mask = 0
z_index = 99
current = true
limit_left = 0
limit_bottom = 360
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.05
drag_margin_top = 0.05
drag_margin_right = 0.05
drag_margin_bottom = 0.05
script = ExtResource( 1 )

[node name="ShakeDuration" type="Timer" parent="."]
one_shot = true

[node name="ShakeFrequency" type="Timer" parent="."]

[node name="ChromTimer" type="Timer" parent="."]
one_shot = true

[node name="PixelTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Shaders" type="CanvasLayer" parent="."]

[node name="GreyScale" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pixelize" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChromAber" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mirage" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/FadeIn = SubResource( 5 )
anims/FadeOut = SubResource( 6 )

[node name="DeathRect" type="ColorRect" parent="."]
visible = false
light_mask = 0
margin_left = -715.0
margin_top = -449.0
margin_right = 700.0
margin_bottom = 455.0
color = Color( 0.0352941, 0, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="ShakeDuration" to="." method="_on_ShakeDuration_timeout"]
[connection signal="timeout" from="ShakeFrequency" to="." method="_on_ShakeFrequency_timeout"]
[connection signal="timeout" from="ChromTimer" to="." method="_on_ChromTimer_timeout"]
[connection signal="timeout" from="PixelTimer" to="." method="_on_PixelTimer_timeout"]
